# asdjn

./: CMakeLists.txt
header/: functions.h  map1.h  map2.h  menu.h  new.h  scorebox.h
others/: others.txt
scores/: name.txt
src/: functions.c  main.c  map1.c  map2.c  menu.c  new.c  scorebox.c
